--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 *{
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
+  box-sizing: border-box;
   -webkit-text-size-adjust: none;
   -webkit-tap-highlight-color: transparent;
   -ms-text-size-adjust: none;
